--- a/index.html
+++ b/index.html
@@ -259,16 +259,16 @@
 	    <h1 class="header_en"><span class="color">F</span>orever <span class="color">N</span>otes <span class="color">S</span>tack</h1>
 	    <h1 class="header_link">https://dist1.github.io/fns</h1>
 	    <div>
-	      <a href="https://github.com/dist1/fns/labels/%E5%BB%BA%E8%AE%BE%E8%AE%BA%E5%9D%9B"> ➥ 建设论坛</a>
+	      <a href="https://github.com/dist1/fns/issues/new?assignees=dist1&labels=%E5%BB%BA%E8%AE%BE%E8%AE%BA%E5%9D%9B&template=1%E5%BB%BA%E8%AE%BE%E8%AE%BA%E5%9D%9B.md&title=%E6%88%91%E6%9C%89%E4%B8%80%E4%B8%AA%E6%96%B0%E7%9A%84%E7%82%B9%E5%AD%90%EF%BC%9A"> ➥ 建设论坛</a>
 	    </div>
 	    <div>
-	      <a href="https://github.com/dist1/fns/issues/new?assignees=&labels=%E6%96%B0%E7%9A%84%E6%8F%90%E4%BA%A4&template=new_submit.md&title=%E6%96%B0%E7%9A%84%E6%8F%90%E4%BA%A4%EF%BC%9A%5Bsimplified_name%5D"> ➥ 新的提交</a>
+	      <a href="https://github.com/dist1/fns/issues/new?assignees=&labels=%E6%96%B0%E7%9A%84%E6%8F%90%E4%BA%A4&template=2%E6%96%B0%E7%9A%84%E6%8F%90%E4%BA%A4.md&title=%E6%96%B0%E7%9A%84%E6%8F%90%E4%BA%A4%EF%BC%9A%5Bsimplified_name%5D"> ➥ 新的提交</a>
 	    </div>
 	    <div>
 	      <a target="_blank" href="https://dist1.github.io/fns/rules.html"> ➥ 查看规则</a>
 	    </div>
 	    <div>
-	      <a href="https://github.com/dist1/fns/issues/new?assignees=&labels=%E4%BF%A1%E6%81%AF%E4%B8%BE%E6%8A%A5&template=info_report.md&title=%28%E4%B8%BE%E6%8A%A5%29+%3A+%3C%E6%A0%87%E9%A2%98%3E+"> ➥ 信息举报</a>
+	      <a href="https://github.com/dist1/fns/issues/new?assignees=&labels=%E4%BF%A1%E6%81%AF%E4%B8%BE%E6%8A%A5&template=3%E4%BF%A1%E6%81%AF%E4%B8%BE%E6%8A%A5.md&title=%EF%BC%88%E4%B8%BE%E6%8A%A5%EF%BC%89%E6%A0%87%E9%A2%98"> ➥ 信息举报</a>
 	    </div>
 	  </div>
 	  <img src="www/fns.png" class="quote">
