--- a/index.html
+++ b/index.html
@@ -131,6 +131,33 @@
 	
 	<div class="fns-record stacktop">
 	  <div class="symobl">
+	    <img src="http://dist1.tech/osc/logo.png">
+	  </div>
+	  <div class="text">
+	    <div class="title">
+	      <a href="record.html?fns_code=FNS-4">
+		<h3>
+		  <span class="fns_code">FNS-4</span> : <span class="sname">显然软件分类法 | Obviously Software Classifying</span>
+		</h3>
+	      </a>
+	    </div>
+	    <p class="line1">
+	      <span class="sbm_time">2019年/09月/08日</span> ， 由 <a class="presenter" href="http://dist1.tech/">分发1哲学委员会</a> 提交
+	    </p>
+	    <div class="intro">
+	      一种软件分类方法。 A software classifying.
+	      <br>
+	      <ul class="links">
+		
+		<li><a href=http://dist1.tech/osc/%E6%98%BE%E7%84%B6%E8%BD%AF%E4%BB%B6%E5%88%86%E7%B1%BB%E6%B3%95.pdf>正文</a></li>
+		
+	      </ul>
+	    </div>
+	  </div>
+	</div>
+	
+	<div class="fns-record">
+	  <div class="symobl">
 	    <img src="https://dist1.github.io/Challenge-From-Bob-Lama/Challenge_From_Bob_Lama.png">
 	  </div>
 	  <div class="text">
