--- a/program/FRONT.tmpl.html
+++ b/program/FRONT.tmpl.html
@@ -135,9 +135,9 @@
 	  </div>
 	  <div class="text">
 	    <div class="title">
-	      <a href="record.html?fns_code=FNS-{{rec.ans_code}}">
+	      <a href="record.html?fns_code=FNS-{{rec.fns_code}}">
 		<h3>
-		  <span class="fns_code">FNS-{{ rec.ans_code }}</span> : <span class="sname">{{ rec.simplified_name }}</span>
+		  <span class="fns_code">FNS-{{ rec.fns_code }}</span> : <span class="sname">{{ rec.simplified_name }}</span>
 		</h3>
 	      </a>
 	    </div>
